@@ -66,7 +66,7 @@ Usted ha debido de recibir una copia de la Licencia General Pública de GNU junt
     <string name="sensors_disabled">Deshabilitado: Ahorra energía</string>
     <string name="disabled">Deshabilitado</string>
     <string name="version">Versión</string>
-    <string name="app_website">Visite el &lt;a href=%1$s&gt;sitio web&lt;/a&gt; para más información.</string>
+    <string name="app_website">Visite el &lt;a href=%s&gt;sitio web&lt;/a&gt; para más información.</string>
     <string name="copyright">Derechos de Autor</string>
     <string name="current_bearing">Giro actual</string>
     <string name="destination_reached">En destino</string>
