@@ -97,7 +97,7 @@
     <string name="about">बारे में</string>
     <string name="version">संस्करण (वर्शन)</string>
     <string name="build_time">%s पर बनाया गया।</string>
-    <string name="app_website">अधिक जानकारी के लिए &lt;a href=%1$s&gt;वेबसाइट&lt;/a&gt; पर जाएँ।</string>
+    <string name="app_website">अधिक जानकारी के लिए &lt;a href=%s&gt;वेबसाइट&lt;/a&gt; पर जाएँ।</string>
     <string name="distance_m">मीटर</string>
     <string name="distance_km">किलो मीटर</string>
     <string name="height_difference">ऊंचाई में अंतर</string>
