@@ -85,7 +85,7 @@
     <string name="about">アプリについて</string>
     <string name="version">バージョン</string>
     <string name="build_time">%s にビルド。</string>
-    <string name="app_website">詳細は &lt;a href=%1$s&gt;webサイト&lt;/a&gt; を参照してください。</string>
+    <string name="app_website">詳細は &lt;a href=%s&gt;webサイト&lt;/a&gt; を参照してください。</string>
     <string name="license">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.\n
  \n
  This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n
