@@ -66,7 +66,7 @@
     <string name="about">프로그램 정보</string>
     <string name="version">버전</string>
     <string name="build_time">%s 내장 되어있습니다.</string>
-    <string name="app_website">더 많은 정보에 대하여 &lt;a href=%1$s&gt;웹 사이트&lt;/a&gt;를 방문 하십시오.</string>
+    <string name="app_website">더 많은 정보에 대하여 &lt;a href=%s&gt;웹 사이트&lt;/a&gt;를 방문 하십시오.</string>
     <string name="copyright">저작권</string>
     <string name="license">이 프로그램은 무료 소프트웨어입니다: 재배포 하거나  라이센스 버전 3, 또는 이후 버전에서, 자유 소프트웨어 재단에 의해 출판된 GNU 일반 공중 사용 허가서의 조건에 따라 수정할 수 있습니다.\n
  \n
