@@ -59,7 +59,7 @@
     <string name="about">Sobre</string>
     <string name="version">Versão</string>
     <string name="build_time">Desenvolvida em %s.</string>
-    <string name="app_website">Visite &lt;a href=%1$s&gt;website&lt;/a&gt; para mais informações.</string>
+    <string name="app_website">Visite &lt;a href=%s&gt;website&lt;/a&gt; para mais informações.</string>
     <string name="license">Este programa é um software livre: pode redistribuí-lo e/ou modificá-lo sob os termos da Licença Pública Geral da GNU por Free Software Foundation, seja pela versão 3 da licença, ou qualquer versão posterior.\n
  \n
  Este programa é distribuído na esperança de ser útil, mas SEM NENHUMA GARANTIA; inclusive a garantia implícita de COMERCIALIZAÇÃO ou PARA USO PESSOAL. Veja a Licença Pública Geral da GNU para mais detalhes.\n
