@@ -113,7 +113,7 @@
     <string name="about">About</string>
     <string name="version">Version</string>
     <string name="build_time">Built on %s.</string>
-    <string name="app_website">Visit the &lt;a href="%1$s"&gt;website&lt;/a&gt; for more info.</string>
+    <string name="app_website">Visit the &lt;a href="%s"&gt;website&lt;/a&gt; for more info.</string>
     <string name="copyright">Copyright</string>
     <string name="license">This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
